# numerical-optimization-benchmarks

./: .gitignore  Doxyfile  Makefile  README.md  bin  config.toml  pyproject.toml  requirements.txt  setup.py
example_configs/: egg_holder_dimensions.toml  large_population.toml
include/: BenchmarkRunner.h  Config.h  Experiment.h  Population.h  ProblemFactory.h  RunExperiments.h  SolutionBuilder.cpp  SolutionBuilder.h  TestRunner.h
include/Optimizer/: Blind.h  DifferentialEvolution.h  LocalSearch.h  Optimizer.h  OptimizerFactory.h
include/Optimizer/Mutation/: Best1.h  Best2.h  Rand1.h  Rand2.h  RandBest1.h
include/Problem/: AckleyOne.h  AckleyTwo.h  DeJong.h  DeJongOne.h  EggHolder.h  Griewank.h  Problem.h  Rastrigin.h  Rosenbrock.h  Schwefel.h  SineEnvelope.h  StretchedV.h
latex/: benchmark.json  benchmark.tex  references.bib  time.csv
results/Example_Benchmark/: fitness.csv  time.csv
results/Example_Benchmark/docs/: benchmark.tex
scripts/run_benchmark/: __main__.py  load_config.py  load_data.py  plot_builder.py  problems.py  run_experiments.py
scripts/run_benchmark/build_results/: __init__.py  build_docs.py  build_plots.py  build_results.py  plot_builder.py
scripts/run_benchmark/models/: __init__.py  benchmark.py  experiment.py  optimizer.py
src/: BenchmarkRunner.cpp  Config.cpp  Experiment.cpp  Population.cpp  ProblemFactory.cpp  RunExperiments.cpp  SolutionBuilder.cpp  TestRunner.cpp  main.cpp
src/Optimizer/: Blind.cpp  DifferentialEvolution.cpp  LocalSearch.cpp
src/Population/: Population.cpp
utils/: compile-report.sh  doxygen.sh
